--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-=iowt=
+iowt
 
 I/O workload tester for different numbers of nodes and situations.
 
-==twonode==
+
+twonode
+
 Base case. Tests local vs. remote, memory vs. disk
